--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,48 @@
 @import "layouts/index";
 @import "components/index";
 @import "pages/index";
+
+@import "components/footer";
+@import "components/navbar";
+@import "components/button";
+
+body {
+  margin: 0;
+  font-family: Open-sans, sans-serif;
+  color : white;
+  background-color:#F4F4F4;
+}
+
+h1, h2, h3{
+  font-family: Raleway, Helvetica, sans-serif;
+  text-align: center;
+  font-size: 40px;
+  font-weight: bold;
+}
+
+h5 {
+  font-family: Raleway, Helvetica, sans-serif;
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+  color : grey;
+  margin-bottom: 15px;
+}
+
+
+h6 {
+  font-family: Raleway, Helvetica, sans-serif;
+  text-align: center;
+  font-size: 15px;
+  font-weight: bold;
+}
+
+.banner {
+  background-size: cover;
+/*  background :linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%);
+*/height: 80vh;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  text-align: center;
+}
