--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,11 @@
-<h1>Pages#home</h1>
-<p>bkbkbk</p>
-<p>bkbnhjhjhjhjhkbk</p>
+
+<div class= "banner middle-pic" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://images.unsplash.com/photo-1472377723522-4768db9c41ce?dpr=1&auto=compress,format&fit=crop&w=2850&h=&q=80&cs=tinysrgb&crop=');">
+  <div class="banner-content">
+    <h1></i>Spores Homes</h1>
+    <p class="big p"> Well Being and Learning Homes </p>
+    <button class = "btn btn-yours" type="submit"> <%= t("Find") %> </button>
+</div>
+</div>
+
+
 
