--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,7 +12,7 @@
       <!-- Links when logged in -->
       <%= link_to "Our story", "#", class: "navbar-wagon-item navbar-wagon-link" %>
       <%= link_to "Contribute", "#", class: "navbar-wagon-item navbar-wagon-link" %>
-      <%= link_to "Donate", "#", class: "navbar-wagon-item navbar-wagon-link" %>
+      <%= link_to "Donation", "#", class: "navbar-wagon-item navbar-wagon-link" %>
 
 <% if user_signed_in? %>
       <!-- Avatar with dropdown menu -->
