--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -1,2 +1,11 @@
 <h1>Flats#show</h1>
 <p>Find me in app/views/flats/show.html.erb</p>
+
+<% content_for(:after_js) do %>
+  <%= javascript_tag do %>
+    $(document).ready(function() {
+      var coord = <%= raw @flat_coordinates.to_json %>;
+      alert('Flat coordinates are ' + coord.lat + ', ' + coord.lng);
+    });
+  <% end %>
+<% end %>
