map index + div and link

--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -1,4 +1,9 @@
 <h1>Flats#show</h1>
+
+
+  <p><%= @flat %></p>
+
+
 <p>Find me in app/views/flats/show.html.erb</p>
 
 <% content_for(:after_js) do %>
