--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -32,6 +32,16 @@ h1, h2, h3{
   font-weight: bold;
 }
 
+h4 {
+  font-family: Raleway, Helvetica, sans-serif;
+  text-align: center;
+  font-size: 40px;
+  font-weight: bold;
+  color: #999999;
+  margin-top: 25px;
+  margin-bottom: 25px;
+}
+
 h5 {
   font-family: Raleway, Helvetica, sans-serif;
   text-align: center;
