--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -1,22 +1,84 @@
-<h1>Flats#index</h1>
-<p>Find me in app/views/flats/index.html.erb</p>
+<h4>Homes</h4>
 
-div id="map" style="width: 100%; height: 600px;"></div>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>Google Maps Markers - Static Example</title>
+    <style type="text/css">
+      body { margin: 0; }
+      #map {
+        display: flex;
+        height: 65vh;
+        width: 100%;
+      }
+    </style>
+  </head>
+  <body>
+    <!-- The map will be drawn in this div -->
+    <div id="map"></div>
 
-<% content_for(:after_js) do %>
-  <%= javascript_tag do %>
-    $(document).ready(function() {
-      var handler = Gmaps.build('Google');
+    <!-- Include Google Maps JS library. You should use your *own* key -->
+    <script src="https://maps.google.com/maps/api/js?key=AIzaSyDANjx3bosEtIyzJaoWs50Wnt6nt_1rmxU"></script>
+
+    <!-- Include Dependencies of GMaps for Rails gem -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/js-marker-clusterer/1.0.0/markerclusterer_compiled.js"></script>
+    <script src="https://cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/infobox/src/infobox_packed.js"></script>
+    <script src="https://cdn.rawgit.com/apneadiving/Google-Maps-for-Rails/master/js_compilation/gmaps_google.js"></script>
+
+    <script type="text/javascript">
+      var handler = Gmaps.build('Google', { markers: { clusterer: undefined } });
       handler.buildMap({ internal: { id: 'map' } }, function() {
-        markers = handler.addMarkers(<%= raw @hash.to_json %>);
+        markers = handler.addMarkers(
+          [
+            {
+              "lat": 39.1631959,
+              "lng": -0.2537897,
+              "infowindow": "<h1>Cullera</h1><p><img src='https://res.cloudinary.com/wagon/image/upload/c_fill,h_200/v1500988849/nqoqw5sinlj1hqvxrfyi.jpg' height='200'></p>"
+            },
+                        {
+              "lat": 46.15,
+              "lng": 4.7167,
+              "infowindow": "<h1>Cullera</h1><p><img src='https://res.cloudinary.com/wagon/image/upload/c_fill,h_200/v1500988849/nqoqw5sinlj1hqvxrfyi.jpg' height='200'></p>"
+            },
+                        {
+              "lat": 44.4833333,
+              "lng": 11.3333333,
+              "infowindow": "<h1>Cullera</h1><p><img src='https://res.cloudinary.com/wagon/image/upload/c_fill,h_200/v1500988849/nqoqw5sinlj1hqvxrfyi.jpg' height='200'></p>"
+            },
+          ]
+        );
         handler.bounds.extendWith(markers);
         handler.fitMapToBounds();
-        if (markers.length == 0) {
-          handler.getMap().setZoom(2);
-        } else if (markers.length == 1) {
-          handler.getMap().setZoom(14);
-        }
       });
-    });
-  <% end %>
-<% end %>
+    </script>
+  </body>
+</html>
+
+<div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://kitt.lewagon.com/placeholder/cities/shanghai');">
+
+  <div class="card-description" style="padding: 80px;">
+    <h2>Cullera</h2>
+  </div>
+
+  <%= link_to "", flat_path(@flats.first), class: "card-link" %>
+</div>
+
+
+
+<!--
+Ruby script which generated the markers from lewagon/alumni repo:
+require "json"
+markers = []
+City.order(:name).each do |city|
+  if city.latitude && city.longitude
+    markers << {
+      lat: city.latitude,
+      lng: city.longitude,
+      infowindow: "<h1>#{city.name}</h1><p><img src='https://res.cloudinary.com/wagon/image/upload/c_fill,h_200/#{city.city_background_picture.path}' height='200'></p>"
+    }
+  end
+end
+puts JSON.pretty_generate(markers)
+
+
