--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -61,7 +61,7 @@
     <h2>Cullera</h2>
   </div>
 
-  <%= link_to "", flat_path(@flats.first), class: "card-link" %>
+  <%= link_to "", flat_path(@flats.first.id), class: "card-link" %>
 </div>
 
 
