major changes for gmap

--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -1,7 +1,7 @@
 <h1>Flats#show</h1>
 
 
-  <p><%= @flat %></p>
+  <p><%= @flat.address %> <%= @flat.postcode %> <%= @flat.city %></p>
 
 
 <p>Find me in app/views/flats/show.html.erb</p>
