button add review and form

--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -14,3 +14,11 @@
     });
   <% end %>
 <% end %>
+
+
+
+
+<%= link_to 'all houses', flats_path %>
+
+<%= link_to 'add a review', new_flat_review_path(@flat) %>
+
