--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -13,7 +13,7 @@
         </div>
 
         <div class="form-actions">
-          <%= f.button :submit, "Sign up", class: "btn btn-danger buton" %>
+          <%= f.button :submit, "Add a review", class: "btn btn-danger buton" %>
         </div>
         <% end %>
       </div>
