reviews on show

--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -9,11 +9,10 @@
 
         <div class="form-inputs">
           <%= f.input :description,label: false, required: true, placeholder: 'Your review' %>
-          <%= f.input :picture, label: false, placeholder: 'Share moments with pictures' %>
         </div>
 
         <div class="form-actions">
-          <%= f.button :submit, "Add a review", class: "btn btn-danger buton" %>
+          <%= f.button :submit, "Add a review", class: "btn btn-yours" %>
         </div>
         <% end %>
       </div>
