--- a/app/assets/stylesheets/pages/_flat.scss
+++ b/app/assets/stylesheets/pages/_flat.scss
@@ -15,3 +15,12 @@
 .card {
   position: relative;
 }
+
+.review {
+  p {
+  font-family: Raleway, Helvetica, sans-serif;
+  text-align: center;
+  font-size: 15px;
+  color: black;
+  }
+}
