--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -18,7 +18,7 @@
         </div>
 
         <div class="form-actions">
-          <%= f.button :submit, "Sign up", class: "btn btn-danger buton" %>
+          <%= f.button :submit, "Sign up", class: "btn btn-yours" %>
         </div>
         <% end %>
 
