--- a/app/assets/stylesheets/components/_map_box.scss
+++ b/app/assets/stylesheets/components/_map_box.scss
@@ -1,3 +1,10 @@
 .map_box {
   padding: 10px;
+  h6 {
+    font-family: Raleway, Helvetica, sans-serif;
+    text-align: center;
+    font-size: 15px;
+    font-weight: bold;
+    color: #999999;
+  }
 }
