--- a/app/views/flats/_map_box.html.erb
+++ b/app/views/flats/_map_box.html.erb
@@ -1,5 +1,4 @@
 <div class="map_box">
-  <h3><%= flat.name %></h3>
-  <p><%= flat.address %></p>
-  <%= link_to "Details", flat_path(flat), target: :blank, class: "btn btn-warning" %>
+  <h6><%= flat.address %></h6>
+  <%= link_to "Details", flat_path(flat), target: :blank, class: "btn btn-yours" %>
 </div>
