--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -1,6 +1,6 @@
 <h4>Homes</h4>
 
-<div id="map"></div>
+<div id="map" style="height: 450px;"></div>
 
 
 <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://kitt.lewagon.com/placeholder/cities/shanghai');">
@@ -22,7 +22,7 @@
       if (markers.length == 0) {
         handler.getMap().setZoom(2);
       } else if (markers.length == 1) {
-        handler.getMap().setZoom(10);
+        handler.getMap().setZoom(5);
       }
     });
   </script>
