--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,2 +1,16 @@
-<h1>Bookings#new</h1>
-<p>Find me in app/views/bookings/new.html.erb</p>
+<<div class="container">
+  <div class="row">
+    <div class="col-xs-12 col-sm-4 col-sm-offset-4">
+      <div class="form-login">
+
+      <%= simple_form_for [@user, @booking] do |f| %>
+        <%= f.error_notification %>
+        <%= f.input :member_of_people, :collection => [1, 2, 3, 4, 5, 6, 7, 8]%>
+        <%= f.input :begin_date %>
+        <%= f.input :end_date %>
+        <%= f.submit "Je réserve", class: "btn btn-yours" %>
+      <% end %>
+      </div>
+    </div>
+  </div>
+</div>
