Name Baseline + Footer

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,10 +1,10 @@
  <div class="footer">
   <div class="footer-links">
-    <a target="_blank" href="https://github.com/AllanBallester/RiSE"><i class="fa fa-github"></i></a>
-    <a target="_blank" href="https://join.slack.com/t/needafewgotalot/shared_invite/MjIwNTE4NzM2NzY5LTE1MDE2NzM4MzctOGIyMjk5YjAwMA"><i class="fa fa-slack"></i></a>
-    <a target="_blank" href="#"><i class="fa fa-instagram"></i></a>
-    <a target="_blank" href="#"><i class="fa fa-facebook"></i></a>
+    <a target="_blank" href="https://github.com/LeaWoittequand/Spores"><i class="fa fa-github"></i></a>
+    <a target="_blank" href="https://join.slack.com/t/sporeshomes/shared_invite/enQtMjY0OTAyNjc2Nzg2LTM3YjQ4MzY4NzcxNTYyODZhNWE0OTM3NDk3MDYyNjE2M2JhZjA1MmY3OTZlZGI1NDgyMjMyYTY4ZjEyNTdhYTU"><i class="fa fa-slack"></i></a>
+    <a target="_blank" href="https://www.instagram.com/spores_homes/?hl=en"><i class="fa fa-instagram"></i></a>
     <a target="_blank" href="https://www.linkedin.com/company-beta/25009956/"><i class="fa fa-linkedin"></i></a>
+    <a target="_blank" href="https://www.youtube.com/channel/UCmvj9eaBC8JlVQVQWjdheGg"><i class="fa fa-youtube"></i></a>
   </div>
   <div class="footer-copyright hidden-xs">
     <p> Copyright © 2017,   Spores Homes, All Rights Reserved <p>
