--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -5,10 +5,10 @@
 
       <%= simple_form_for [@user, @booking] do |f| %>
         <%= f.error_notification %>
-        <%= f.input :member_of_people, :collection => [1, 2, 3, 4, 5, 6, 7, 8]%>
+        <%= f.input :member_of_people, :collection => [1, 2, 3, 4, 5, 6, 7, 8], label: 'How many will you be ?'%>
         <%= f.input :begin_date %>
         <%= f.input :end_date %>
-        <%= f.submit "Je réserve", class: "btn btn-yours" %>
+        <%= f.submit "Booking", class: "btn btn-yours" %>
       <% end %>
       </div>
     </div>
