--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -8,6 +8,7 @@
         <%= f.input :member_of_people, :collection => [1, 2, 3, 4, 5, 6, 7, 8], label: 'How many will you be ?'%>
         <%= f.input :begin_date %>
         <%= f.input :end_date %>
+        <%= f.input :flat_id, :as => :hidden, :input_html => { :value => @flat.id } %>
         <%= f.submit "Booking", class: "btn btn-yours" %>
       <% end %>
       </div>
