bandeau Cullera supp

--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -5,9 +5,9 @@
 
 <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://kitt.lewagon.com/placeholder/cities/shanghai');">
 
-  <div class="card-description" style="padding: 80px;">
+<!--   <div class="card-description" style="padding: 80px;">
     <h2>Cullera</h2>
-  </div>
+  </div> -->
 
   <%= link_to "", flat_path(@flats.first.id), class: "card-link" %>
 </div>
