--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -12,6 +12,15 @@
   <%= link_to "", flat_path(@flats.first.id), class: "card-link" %>
 </div>
 
+<div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://kitt.lewagon.com/placeholder/cities/shanghai');">
+
+<!--   <div class="card-description" style="padding: 80px;">
+    <h2>Cullera</h2>
+  </div> -->
+
+  <%= link_to "", flat_path(@flats.second.id), class: "card-link" %>
+</div>
+
 <% content_for(:after_js) do %>
   <script type="text/javascript">
     const handler = Gmaps.build('Google');
