add link_to acuity for booking

--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -16,7 +16,7 @@
     <div class="row">
       <div class="flat_infos" align="center">
         <p><%= @flat %></p>
-        <%= link_to "Je book", new_flat_booking_path(@flat), class: "btn btn-yours" %>
+        <%= link_to "Je book", "https://app.acuityscheduling.com/schedule.php?owner=13398936", class: "btn btn-yours" %>
       </div>
     </div>
   </div>
