--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -34,7 +34,7 @@
         <% @flat.reviews.each do |review| %>
           <%= render 'reviews_flat', review: review %>
         <% end %>
-        <%= link_to 'Add a review', new_flat_review_path(@flat), class: "btn btn-yours" %>
+<!--         <%= link_to 'Add a review', new_flat_review_path(@flat), class: "btn btn-yours" %> -->
       </div>
     </div>
   </div>
