--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
     <%= render 'shared/footer' %>
 
 
-    <%= javascript_include_tag 'https://maps.google.com/maps/api/js?key=AIzaSyDANjx3bosEtIyzJaoWs50Wnt6nt_1rmxU' %>
+    <%= javascript_include_tag 'https://maps.google.com/maps/api/js?&key=AIzaSyDANjx3bosEtIyzJaoWs50Wnt6nt_1rmxU' %>
     <%= javascript_include_tag 'https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js' %>
     <%= javascript_include_tag 'https://cdnjs.cloudflare.com/ajax/libs/js-marker-clusterer/1.0.0/markerclusterer_compiled.js' %>
     <%= javascript_include_tag 'https://cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/infobox/src/infobox_packed.js' %>
