--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -1,55 +1,69 @@
 
-<h4><%= @flat.address %></h4>
+<!-- <h4> Valencia | Cullera Beach </h4>
+-->
 
 <% content_for(:after_js) do %>
-  <%= javascript_tag do %>
-    $(document).ready(function() {
-      var coord = <%= raw @flat_coordinates.to_json %>;
-      alert('Flat coordinates are ' + coord.lat + ', ' + coord.lng);
-    });
-  <% end %>
+ <%= javascript_tag do %>
+   $(document).ready(function() {
+     var coord = <%= raw @flat_coordinates.to_json %>;
+     alert('Flat coordinates are ' + coord.lat + ', ' + coord.lng);
+   });
+ <% end %>
 <% end %>
 
-
 <div class="container">
-  <div class="flat_content">
-    <div class="row">
-      <div class="flat_infos" align="center">
-        <p><%= @flat %></p>
-        <%= link_to "Je book", "https://app.acuityscheduling.com/schedule.php?owner=13398936", class: "btn btn-yours" %>
+
+  <div class="col-xs-12 descriptionhome">
+       <h4 align="center"> Valencia | Cullera Beach </h4>
+     <h5> Welcome to where Spores homes was born. Bitch !!
+      </h5>
+     </div>
+
+
+
+<div class="flat_content">
+   <div class="row text-center">
+
+      <div class="col-md-6 descriptionhome ">
+     <strong> Story </strong>
+      <p> Initially an home that was supposed to be lost as a consequence of a family divorce, Allan decided to rebuy it and bet on his dream of an Home open to the world where creativity can be unleashed and individualidy reduced. March 2017 Spores was born. </p>
+     <strong> Environment </strong>
+      <p> The home is at the dawn of the mountains with dozens of kms of seas by 10 min walking. There is also good hills to practice hiking or road cycling. There is 12 people capacity, from family rooms to hammocks. In the core of a traditional spanish village.<p>
+        <p> This Spores Homes is on Stage 4 : Advanced. </p>
+       <p> It means that the creativity challenged is orientated around design, functionalities and self learning set ups. </p>
+     </div>
+
+     <div class="col-md-6 descriptionhome">
+      <div class="banner-flat">
+          <%= image_tag "http://www.cronorunner.com/competitions/386/editions/444/banner.jpg"%>
       </div>
-    </div>
-  </div>
-  <div class="flat_content">
-    <div class="row text-center">
-      <div class="col-xs-12">
-        <h4 align="center">Info</h4>
-      </div>
-    </div>
-  </div>
-  <div class="flat_content">
-  <h4 align="center">Review</h4>
-    <div class="reviews_flat" align="center">
-      <div class="review-content" align="center">`
-        <% @flat.reviews.each do |review| %>
-          <%= render 'reviews_flat', review: review %>
-        <% end %>
-<!--         <%= link_to 'Add a review', new_flat_review_path(@flat), class: "btn btn-yours" %> -->
-      </div>
-    </div>
-  </div>
-  <div class="back_homes" align="center">
-    <%= link_to 'Back to Homes', flats_path, class: "btn btn-success" %>
-  </div>
+          <%= link_to "Book", new_flat_booking_path(@flat), class: "btn btn-yours" %>
+     </div>
+   </div>
+ </div>
+
+ <div class="flat_content">
+ <h4 align="center">Review</h4>
+   <div class="reviews_flat" align="center">
+     <div class="review-content" align="center">`
+       <% @flat.reviews.each do |review| %>
+         <%= render 'reviews_flat', review: review %>
+       <% end %>
+       <%= link_to 'Add a review', new_flat_review_path(@flat), class: "btn btn-yours" %>
+     </div>
+   </div>
+ </div>
+ <div class="back_homes" align="center">
+   <%= link_to 'Back to Homes', flats_path, class: "btn btn-success" %>
+ </div>
 </div>
 
 
-
 <% content_for(:after_js) do %>
-  <%= javascript_tag do %>
-  $(document).ready(function() {
-  var coord = <%= raw @profile_coordinates.to_json %>;
-  alert(profile.lat);
+ <%= javascript_tag do %>
+ $(document).ready(function() {
+ var coord = <%= raw @profile_coordinates.to_json %>;
+ alert(profile.lat);
 });
 <% end %>
 <% end %>
