--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,8 +10,8 @@
 
 
       <!-- Links when logged in -->
-      <%= link_to "Donation", "#", class: "navbar-wagon-item navbar-wagon-link" %>
-
+<!--       <%= link_to "Donation", "#", class: "navbar-wagon-item navbar-wagon-link" %>
+ -->
 
   </div>
 
