--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -7,3 +7,21 @@
   align-items: center;
   text-align: center;
 }
+
+.descriptionhome {
+img {
+  height: 100%;
+    width: 100%;
+    margin-top: 20px;
+    margin-bottom: 15px;
+    }
+}
+
+.descriptionhome2 {
+img {
+  height: 80%;
+    width: 80%;
+    margin-top: 40px;
+    margin-bottom: 15px;
+    }
+}
