--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -65,9 +65,9 @@
        <% @flat.reviews.each do |review| %>
          <%= render 'reviews_flat', review: review %>
        <% end %>
-   <!--     <div align="center">
+   <div align="center">
        <%= link_to 'Add a review', new_flat_review_path(@flat), class: "btn btn-yours"%>
-     </div> -->
+     </div>
      </div>
    </div>
  </div>
