Beaujolais front added

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -8,3 +8,14 @@
   text-align: center;
   transition: all ease 0.3s;
 }
+
+.btn-fund {
+  text-decoration: none ;
+  background-color: #7FB722;
+  color: white;
+  border-radius : 4px;
+  font-weight: bold;
+  padding : 6.5px 18px;
+  text-align: center;
+  transition: all ease 0.3s;
+}
