--- a/app/views/flats/beaujolais.html.erb
+++ b/app/views/flats/beaujolais.html.erb
@@ -1,7 +1,4 @@
-
-<!-- <h4> Valencia | Cullera Beach </h4>
--->
-
+beaujolais.html.erb
 <% content_for(:after_js) do %>
  <%= javascript_tag do %>
    $(document).ready(function() {
