--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -38,7 +38,7 @@
 
      <div class="col-md-6 descriptionhome">
           <%= image_tag "http://proprietes.lefigaro.fr/indicateur/images/PDF/CMS/articles/126165342-1499344234.12.jpg"%>
-          <%= link_to "Apply to Co-owning", "https://app.acuityscheduling.com/schedule.php?owner=13398936", class: "btn btn-yours btn-fund" %>
+          <%= link_to "Je book", new_flat_booking_path(@flat), class: "btn btn-yours" %>
      </div>
    </div>
  </div>
