--- a/app/views/flats/_reviews_flat.html.erb
+++ b/app/views/flats/_reviews_flat.html.erb
@@ -1,3 +1,4 @@
+<% content_for :title, "Spores - Review Experience" %>
 
   <div class="row review">
     <div class="cols-xs-12 col-sm-4 col-md-2 col-lg-2 user-infos">
