--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,10 @@
+<% content_for :title, "Spores - Open and Self-learning Homes" %>
+
 
 <div class= "banner middle-pic" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://images.unsplash.com/photo-1469384631720-500a19caf2be?dpr=1&auto=compress,format&fit=crop&w=2850&h=&q=80&cs=tinysrgb&crop=');">
   <div class="banner-content">
     <h1></i>Spores Homes</h1>
-    <p class="big p"> Well Being and Learning Homes </p>
+    <p class="big p"> Well Being and Self-Learning Homes </p>
     <%= link_to "Find", flats_path, class: "btn btn-yours" %>
   </div>
 </div>
