--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,7 @@
   <div class="banner-content">
     <h1></i>Spores Homes</h1>
     <p class="big p"> Well Being and Self-Learning Homes </p>
-    <%= link_to "Find", flats_path, class: "btn btn-yours" %>
+    <%= link_to "Find Spores Homes", flats_path, class: "btn btn-yours" %>
   </div>
 </div>
 
