--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -12,7 +12,7 @@
   align-items: center;
 }
 .footer-links a {
-  color: #FF847C;
+  color: #2e2d89;
   opacity: 0.8;
   text-decoration: none;
   font-size: 24px;
@@ -22,10 +22,10 @@
   opacity: 1;
 }
 .footer .fa-heart {
-  color: #D23333;
+  color: #2e2d89;
 }
 
 .footer-copyright {
   font-size: 10px;
-  color: #FF847C;
+  color: #2e2d89;
 }
