--- a/app/assets/stylesheets/components/_map_box.scss
+++ b/app/assets/stylesheets/components/_map_box.scss
@@ -8,3 +8,17 @@
     color: #999999;
   }
 }
+
+.infowindow {
+  display: flex;
+  align-items: center;
+
+  div {
+    padding: 5px 0 5px 15px;
+  }
+
+  p {
+    color: black;
+    font-weight: bold;
+  }
+}
