--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -1,6 +1,6 @@
 <% content_for :title, "Spores - World Map" %>
 
-<h4>Where are your traveling to ?</h4>
+<h4>Where will you live Spores' experience ?</h4>
 
 <div id="map" style="height: 450px;"></div>
 
