--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,7 +10,7 @@
 </div>
 
 <div class="container" id="home-giders">
-  <h5 class= "text-center text-space"> How was your Experience at Spores ? </h5>
+  <h5 class= "text-center text-space marginn"> How was Spores' experience ? </h5>
   <div class="row">
   <% first_feedback = true %>
     <% @feedbacks.each do |gider| %>
