--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,12 +1,13 @@
 .btn-yours {
   text-decoration: none ;
-  background-color: #3A394F;
+  background-color: #2e2d89;
   color: white;
   border-radius : 4px;
   font-weight: bold;
   padding : 6.5px 18px;
   text-align: center;
   transition: all ease 0.3s;
+  font-size: 14px;
 }
 
 .btn-fund {
@@ -72,4 +73,9 @@
   width: 100%;
   height: 34px;
   text-align: center;
+}
+
+.sign-in-text-account {
+  font-size: 14px;
+  color: black;
 }
