--- a/app/views/flats/beaujolais.html.erb
+++ b/app/views/flats/beaujolais.html.erb
@@ -74,7 +74,7 @@ beaujolais.html.erb
    </div>
  </div>
  <div class="back_homes" align="center">
-   <%= link_to 'Back to Homes', flats_path, class: "btn btn-success" %>
+   <%= link_to 'Back to Spores Homes', flats_path, class: "btn btn-success" %>
  </div>
 </div>
 
