--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -39,7 +39,7 @@
 
      <div class="col-md-6 descriptionhome">
           <%= image_tag "http://proprietes.lefigaro.fr/indicateur/images/PDF/CMS/articles/126165342-1499344234.12.jpg"%>
-          <%= link_to "Je book", new_flat_booking_path(@flat), class: "btn btn-yours" %>
+          <%= link_to "Book", new_flat_booking_path(@flat), class: "btn btn-yours" %>
      </div>
    </div>
  </div>
@@ -76,7 +76,7 @@
    </div>
  </div>
  <div class="back_homes" align="center">
-   <%= link_to 'Back to Homes', flats_path, class: "btn btn-success" %>
+   <%= link_to 'Back to Spores Homes', flats_path, class: "btn btn-success" %>
  </div>
 </div>
 
