--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -3,7 +3,7 @@
     <a target="_blank" href="https://www.instagram.com/spores_homes/?hl=en"><i class="fa fa-instagram"></i></a>
     <a target="_blank" href="https://www.linkedin.com/company/11127082/"><i class="fa fa-linkedin"></i></a>
     <a target="_blank" href="https://github.com/AllanBallester/RiSE"><i class="fa fa-github"></i></a>
-    <a target="_blank" href="https://join.slack.com/t/sporeshomes/shared_invite/enQtMjkwMDYxNDEwNjkyLWU3OTA4YjU1MTk3MDRlZjViNjE5OWZiNmQ0NzQ4MWZlYmYwYmUzNjg2NjhlMTBlYjE1OTI3ZmIwYWI5MzhlODE"><i class="fa fa-slack"></i></a>
+   <!--  <a target="_blank" href="https://join.slack.com/t/sporeshomes/shared_invite/enQtMjkwMDYxNDEwNjkyLWU3OTA4YjU1MTk3MDRlZjViNjE5OWZiNmQ0NzQ4MWZlYmYwYmUzNjg2NjhlMTBlYjE1OTI3ZmIwYWI5MzhlODE"><i class="fa fa-slack"></i></a> -->
   </div>
   <div class="footer-copyright hidden-xs">
     <p> Copyright © 2017,   Spores Homes, All Rights Reserved <p>
