--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -33,11 +33,10 @@
 
      <div class="col-md-6 descriptionhome">
           <%= image_tag @flat.picture%>
-
-        <% if Flat.find(1) %>
-          <%= link_to 'Je book', new_flat_booking_path(@flat), class: "btn btn-yours" %>
+        <% if @flat.name == "Morgon" %>
+          <%= link_to 'Apply to Co-owning', 'https://drive.google.com/file/d/1TPx6O-5UzUABJe0h_dcewTWePP6hI2Ul/view?usp=sharing', class: "btn btn-yours" %>
         <% else %>
-        <%= link_to 'Apply to Co-owning', class: "btn btn-yours" %>
+        <%= link_to 'Je book', new_flat_booking_path(@flat), class: "btn btn-yours" %>
         <% end %>
 
      </div>
