--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -39,4 +39,13 @@
   margin-top: 15px;
 }
 
+.descriptionhome {
+  p {
+  color: black;
+  font-size: 14px;
+  font-family: 'Kavivanar', cursive;
+  margin: 8%;
+  }
+}
+
 
