--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,6 @@
   <head>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-111692145-1"></script>
   <script>
   window.dataLayer = window.dataLayer || [];
@@ -41,6 +40,8 @@
     <%= action_cable_meta_tag %>
     <%= stylesheet_link_tag 'application', media: 'all' %>
     <%= favicon_link_tag 'SporesLogo.png' %>
+
+    <link href="https://fonts.googleapis.com/css?family=Kavivanar|Oswald" rel="stylesheet">
 
   </head>
 
