--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -41,7 +41,7 @@
      <div class="col-md-6 descriptionhome">
           <%= image_tag @flat.picture%>
         <% if @flat.name == "Morgon" %>
-          <%= link_to 'Apply to Co-owning', 'https://medium.com/@allan.ballester/co-propri%C3%A9taire-dune-spores-homes-5969d2ced8b1', class: "btn btn-yours" %>
+          <%= link_to 'Apply to Co-owning', 'https://www.kickstarter.com/projects/allanballester/1289042900?ref=440370&token=54b4a564', class: "btn btn-yours" %>
         <% else %>
         <%= link_to 'Book', new_flat_booking_path(@flat), class: "btn btn-yours" %>
         <% end %>
