--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -2,7 +2,7 @@
   <div class="footer-links">
     <a target="_blank" href="https://www.instagram.com/spores_homes/?hl=en"><i class="fa fa-instagram"></i></a>
     <a target="_blank" href="https://www.linkedin.com/company/11127082/"><i class="fa fa-linkedin"></i></a>
-    <a target="_blank" href="https://github.com/AllanBallester/RiSE"><i class="fa fa-github"></i></a>
+    <a target="_blank" href="https://github.com/LeaWoittequand/Spores"><i class="fa fa-github"></i></a>
    <!--  <a target="_blank" href="https://join.slack.com/t/sporeshomes/shared_invite/enQtMjkwMDYxNDEwNjkyLWU3OTA4YjU1MTk3MDRlZjViNjE5OWZiNmQ0NzQ4MWZlYmYwYmUzNjg2NjhlMTBlYjE1OTI3ZmIwYWI5MzhlODE"><i class="fa fa-slack"></i></a> -->
   </div>
   <div class="footer-copyright hidden-xs">
