--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -67,3 +67,12 @@ h6 {
   margin: 25px;
 }
 
+.indexhome {
+  font-family: Raleway, Helvetica, sans-serif;
+  text-align: center;
+  font-size: 25px;
+  font-weight: bold;
+  color : grey;
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
