--- a/app/views/flats/_reviews_flat.html.erb
+++ b/app/views/flats/_reviews_flat.html.erb
@@ -2,11 +2,18 @@
 
   <div class="row review">
     <div class="cols-xs-12 col-sm-4 col-md-2 col-lg-2 user-infos">
+      <% if current_user.facebook_picture_url %>
+      <%= image_tag current_user.facebook_picture_url, class: "avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
+      <% else %>
+      <%= image_tag "https://signup.trybooking.com/images/user-hero-blue.png", class: "avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
+      <% end %>
 
-      <p align="center"><%= link_to review.user.first_name, flat_path(@flat) %></p>
+      <p align="center"><%= link_to review.user.first_name  , flat_path(@flat) %>  <%= review.created_at %></p>
+      <p> Skills : <%= review.user.skill %> <p>
+
     </div>
     <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 review-body" align="center">
-      <p><strong>Commentaire</strong></p>
+      <p><strong></strong></p>
       <p>
         <%= review.description %>
         <%= review.picture %>
