--- a/app/views/user_mailer/review.html.erb
+++ b/app/views/user_mailer/review.html.erb
@@ -648,7 +648,7 @@
 
                         <td valign="top" class="mcnTextContent" style="padding-top:0; padding-right:18px; padding-bottom:9px; padding-left:18px;">
 
-                            <div style="text-align: center;"><span style="font-size:22px"><strong><%=@user.name %>, how was your experience ?</strong></span></div>
+                            <div style="text-align: center;"><span style="font-size:22px"><strong><%=@user.first_name %>, how was your experience ?</strong></span></div>
 
                         </td>
                     </tr>
