metacard core updated

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,11 +25,11 @@
   </script>
 
 
-    <meta property="og:title" content="Spores Homes | Well Being and Self-learning homes">
+    <meta property="og:title" content="Spores Homes | Upcycle abandoned homes">
     <meta property="og:type" content="article">
     <meta property="og:url" content="http://www.spores-homes.com/">
     <meta property="og:image" content="http://res.cloudinary.com/dk9kkvy1o/image/upload/v1514483637/SporesMeta_fiy2ow.jpg">
-    <meta property="og:description" content="There are homes in the world that the key to enter is your personality, not your wallet. Discover the revolution of living.">
+    <meta property="og:description" content="Meet unique people, learn new skills, Reduce, Reuse. Discover the revolution of living everywhere.">
     <meta property="og:site_name" content="Spores Homes ">
 
     <meta charset="UTF-8">
