--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -1,6 +1,6 @@
 <% content_for :title, "Spores - World Map" %>
 
-<h5>Where will you live Spores' experience ?</h5>
+<h5> Where Spores' homes are ?</h5>
 
 <div id="map" style="height: 450px;"></div>
 
