--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -21,7 +21,7 @@
      <h5><%= @flat.baseline %></h5>
      <div class="col-md-12 descriptionhome" align="center">
         <% if @flat.name == "La Orotava" %>
-          <%= link_to 'Apply to Co-owning', 'https://www.kickstarter.com/projects/allanballester/1289042900?ref=440370&token=54b4a564', class: "btn btn-yours" %>
+          <%= link_to 'Apply to Co-owning', 'https://ksr-ugc.imgix.net/assets/020/200/124/4b73ed3d43e8560bc0e9136ebd608b7a_original.png?crop=faces&w=1024&h=576&fit=crop&v=1523469090&auto=format&q=92&s=ed882c9695a48d5648a8010f2e20b74e', class: "btn btn-yours" %>
         <% else %>
         <%= link_to 'Book here', new_flat_booking_path(@flat), class: "btn btn-yours" %>
         <% end %>
