--- a/app/views/user_mailer/review.html.erb
+++ b/app/views/user_mailer/review.html.erb
@@ -613,7 +613,10 @@
 </table></td>
                             </tr>
                             <tr>
-                                <td valign="top" id="templateHeader"><table border="0" cellpadding="0" cellspacing="0" width="100%" class="mcnImageBlock" style="min-width:100%;">
+                                <td valign="top" id="templateHeader"></td>
+                            </tr>
+                            <tr>
+                                <td valign="top" id="templateBody"><table border="0" cellpadding="0" cellspacing="0" width="100%" class="mcnImageBlock" style="min-width:100%;">
     <tbody class="mcnImageBlockOuter">
             <tr>
                 <td valign="top" style="padding:9px" class="mcnImageBlockInner">
@@ -622,7 +625,7 @@
                             <td class="mcnImageContent" valign="top" style="padding-right: 9px; padding-left: 9px; padding-top: 0; padding-bottom: 0; text-align:center;">
 
 
-                                        <img align="center" alt="" src="https://gallery.mailchimp.com/0cf9ba96d0948821f414239a9/images/89ade08a-2791-4f5a-9646-52fe1348f940.jpg" width="549" style="max-width:549px; padding-bottom: 0; display: inline !important; vertical-align: bottom;" class="mcnImage">
+                                        <img align="center" alt="" src="https://gallery.mailchimp.com/0cf9ba96d0948821f414239a9/images/f39bf7ed-2080-42ec-9ac8-36ac4e1f8637.jpg" width="564" style="max-width:1200px; padding-bottom: 0; display: inline !important; vertical-align: bottom;" class="mcnImage">
 
 
                             </td>
@@ -648,7 +651,7 @@
 
                         <td valign="top" class="mcnTextContent" style="padding-top:0; padding-right:18px; padding-bottom:9px; padding-left:18px;">
 
-                            <div style="text-align: center;"><span style="font-size:22px"><strong><%=@user.first_name %>, how was your experience ?</strong></span></div>
+                            <div style="text-align: center;"><span style="font-size:22px"><strong><%= @user.first_name %>, how was your experience ?</strong></span></div>
 
                         </td>
                     </tr>
@@ -663,27 +666,6 @@
         <![endif]-->
             </td>
         </tr>
-    </tbody>
-</table></td>
-                            </tr>
-                            <tr>
-                                <td valign="top" id="templateBody"><table border="0" cellpadding="0" cellspacing="0" width="100%" class="mcnImageBlock" style="min-width:100%;">
-    <tbody class="mcnImageBlockOuter">
-            <tr>
-                <td valign="top" style="padding:9px" class="mcnImageBlockInner">
-                    <table align="left" width="100%" border="0" cellpadding="0" cellspacing="0" class="mcnImageContentContainer" style="min-width:100%;">
-                        <tbody><tr>
-                            <td class="mcnImageContent" valign="top" style="padding-right: 9px; padding-left: 9px; padding-top: 0; padding-bottom: 0; text-align:center;">
-
-
-                                        <img align="center" alt="" src="https://gallery.mailchimp.com/0cf9ba96d0948821f414239a9/images/f39bf7ed-2080-42ec-9ac8-36ac4e1f8637.jpg" width="564" style="max-width:1200px; padding-bottom: 0; display: inline !important; vertical-align: bottom;" class="mcnImage">
-
-
-                            </td>
-                        </tr>
-                    </tbody></table>
-                </td>
-            </tr>
     </tbody>
 </table><table border="0" cellpadding="0" cellspacing="0" width="100%" class="mcnTextBlock" style="min-width:100%;">
     <tbody class="mcnTextBlockOuter">
@@ -778,9 +760,9 @@
                         <tbody><tr>
                             <td class="mcnImageContent" valign="top" style="padding-right: 9px; padding-left: 9px; padding-top: 0; padding-bottom: 0; text-align:center;">
 
-
+                                    <a href="https://www.instagram.com/spores_homes/?hl=en" title="" class="" target="_blank">
                                         <img align="center" alt="" src="https://gallery.mailchimp.com/0cf9ba96d0948821f414239a9/images/2cf5f8ff-4f65-44c7-a62f-fba4c0774ccc.png" width="564" style="max-width:1658px; padding-bottom: 0; display: inline !important; vertical-align: bottom;" class="mcnImage">
-
+                                    </a>
 
                             </td>
                         </tr>
@@ -807,7 +789,7 @@
                             <table border="0" cellspacing="0" class="mcnTextContentContainer" width="100%" style="min-width: 100% !important;background-color: #404040;">
                                 <tbody><tr>
                                     <td valign="top" class="mcnTextContent" style="padding: 18px;color: #F2F2F2;font-family: Helvetica;font-size: 14px;font-weight: normal;text-align: center;">
-                                        <strong>ENTER THE INTERNATIONAL TRIBE COMMUNITY</strong>
+                                        <strong>SPORES 2 IS OPENING IN TENERIFE !!!</strong>
                                     </td>
                                 </tr>
                             </tbody></table>
@@ -836,28 +818,28 @@
 <table border="0" cellpadding="0" cellspacing="0" class="mcnCaptionRightContentOuter" width="100%">
     <tbody><tr>
         <td valign="top" class="mcnCaptionRightContentInner" style="padding:0 9px ;">
-            <table align="left" border="0" cellpadding="0" cellspacing="0" class="mcnCaptionRightImageContentContainer" width="132">
+            <table align="left" border="0" cellpadding="0" cellspacing="0" class="mcnCaptionRightImageContentContainer" width="264">
                 <tbody><tr>
                     <td class="mcnCaptionRightImageContent" align="center" valign="top">
 
 
-                        <a href="https://www.facebook.com/groups/1995960627309154/" title="" class="" target="_blank">
+                        <a href="https://kck.st/2GUT55z" title="" class="" target="_blank">
 
 
-                        <img alt="" src="https://gallery.mailchimp.com/0cf9ba96d0948821f414239a9/images/4db8b92a-d817-4970-8d75-d96967ee3320.png" width="132" style="max-width:390px;" class="mcnImage">
+                        <img alt="" src="https://gallery.mailchimp.com/0cf9ba96d0948821f414239a9/images/67d5eb55-e675-4bca-b2ee-c39e33d8b3aa.png" width="264" style="max-width:1628px;" class="mcnImage">
                         </a>
 
 
                     </td>
                 </tr>
             </tbody></table>
-            <table class="mcnCaptionRightTextContentContainer" align="right" border="0" cellpadding="0" cellspacing="0" width="396">
+            <table class="mcnCaptionRightTextContentContainer" align="right" border="0" cellpadding="0" cellspacing="0" width="264">
                 <tbody><tr>
                     <td valign="top" class="mcnTextContent">
-                        <strong>Meet, share, stay connected, create opportunities ..</strong><br>
-<br>
-This group exist in order to get in one place all the amazing Spores people that share the same values :<br>
-<span style="font-size:12px"><a href="https://www.facebook.com/groups/1995960627309154/requests/" target="_blank">https://www.facebook.com/groups/1995960627309154/</a></span><br>
+                        <br>
+<span style="font-size:12px">Instead of letting your saves sleep at bank speculating for the few invest for the many.<br>
+1% shares for 1200€, 5% for 6000.<br>
+Get much back than only money.</span><br>
 &nbsp;
                     </td>
                 </tr>
@@ -887,6 +869,22 @@ This group exist in order to get in one place all the amazing Spores people that
                 <td class="mcnDividerBlockInner" style="padding: 18px;">
                 <hr class="mcnDividerContent" style="border-bottom-color:none; border-left-color:none; border-right-color:none; border-bottom-width:0; border-left-width:0; border-right-width:0; margin-top:0; margin-right:0; margin-bottom:0; margin-left:0;" />
 -->
+            </td>
+        </tr>
+    </tbody>
+</table><table border="0" cellpadding="0" cellspacing="0" width="100%" class="mcnButtonBlock" style="min-width:100%;">
+    <tbody class="mcnButtonBlockOuter">
+        <tr>
+            <td style="padding-top:0; padding-right:18px; padding-bottom:18px; padding-left:18px;" valign="top" align="center" class="mcnButtonBlockInner">
+                <table border="0" cellpadding="0" cellspacing="0" class="mcnButtonContentContainer" style="border-collapse: separate !important;border-radius: 3px;background-color: #2BAADF;">
+                    <tbody>
+                        <tr>
+                            <td align="center" valign="middle" class="mcnButtonContent" style="font-family: Arial; font-size: 16px; padding: 15px;">
+                                <a class="mcnButton " title="Go to crowdfunding" href="https://kck.st/2GUT55z" target="_blank" style="font-weight: bold;letter-spacing: normal;line-height: 100%;text-align: center;text-decoration: none;color: #FFFFFF;">Go to crowdfunding</a>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
             </td>
         </tr>
     </tbody>
