linkedin button right

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,12 +5,22 @@
   <% end %>
 
   <!-- Right Navigation -->
-  <div class="navbar-wagon-right hidden-xs">
+  <div> </div>
+<div> </div>
+<div> </div>
+<div> </div>
+<div> </div>
+<div> </div>
+<div> </div>
 
+  <div class="navbar-wagon-right top-right">
+
+<div>
     <script src="//platform.linkedin.com/in.js" type="text/javascript"> lang: en_US</script>
 <script type="IN/Share" data-url="http://www.spores-homes.com/" data-counter="right"></script>
+</div>
 
-
+<div class="hidden-xs hidden-sm">
 
       <!-- Links when logged in -->
 <!--       <%= link_to "Donation", "#", class: "navbar-wagon-item navbar-wagon-link" %>
@@ -46,7 +56,7 @@
  -    <% end %>
 
 
-
+    </div>
   </div>
 
   <!-- Dropdown list appearing on mobile only -->
