youtube frame + logo navbar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,7 @@
     <%= csrf_meta_tags %>
     <%= action_cable_meta_tag %>
     <%= stylesheet_link_tag 'application', media: 'all' %>
-    <%= favicon_link_tag 'SporesLogo2.png' %>
+    <%= favicon_link_tag 'Sporesfavi.png' %>
 
     <link href="https://fonts.googleapis.com/css?family=Kavivanar|Oswald" rel="stylesheet">
 
