--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<% content_for :title, "Spores - Open and Self-learning Homes" %>
+<% content_for :title, "Spores - Well being and Learning Homes" %>
 
 
 <div class= "banner middle-pic" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://images.unsplash.com/photo-1469384631720-500a19caf2be?dpr=1&auto=compress,format&fit=crop&w=2850&h=&q=80&cs=tinysrgb&crop=');">
@@ -9,8 +9,34 @@
   </div>
 </div>
 
+<!-- <div id="ytplayer"></div>
+
+<script>
+  // Load the IFrame Player API code asynchronously.
+  var tag = document.createElement('script');
+  tag.src = "https://www.youtube.com/player_api";
+  var firstScriptTag = document.getElementsByTagName('script')[0];
+  firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+
+  // Replace the 'ytplayer' element with an <iframe> and
+  // YouTube player after the API code downloads.
+  var player;
+  function onYouTubePlayerAPIReady() {
+    player = new YT.Player('ytplayer', {
+      height: '360',
+      width: '100%',
+      videoId: 'CWWu348ub5c'
+    });
+  }
+</script> -->
+<div class = "banner">
+<iframe id="ytplayer" type="text/html" width="700" height="390"
+  src="http://www.youtube.com/embed/CWWu348ub5c"
+  frameborder="0"/> </iframe>
+</div>
+
 <div class="container" id="home-giders">
-  <h5 class= "text-center text-space marginn"> How was Spores' experience ? </h5>
+ <!--  <h5 class= "text-center text-space marginn"> How was Spores' experience ? </h5> -->
   <div class="row">
   <% first_feedback = true %>
     <% @feedbacks.each do |gider| %>
