--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,7 @@
     })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
   </script>
 
+    <meta name="google-site-verification" content="m5JoU1H2bwKIukYr_Iywmc6UKXfsPH6S_MH4QRYcEsg" />
 
     <meta property="og:title" content="Spores Homes | Well Being and Self-learning homes">
     <meta property="og:type" content="article">
