--- a/app/views/user_mailer/newbooking.html.erb
+++ b/app/views/user_mailer/newbooking.html.erb
@@ -1,5 +1,6 @@
 
-<p>Name : <%= @user.first_name %><br>
+<p> Spores Homes : <%= @flat.id %>
+Name : <%= @user.first_name %><br>
 Last name : <%= @user.last_name %><br>
 Email : <%= @user.email %><br>
 Phone : <%= @user.phone %><br>
